--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ TestsResultsCache.xml
 # Ignore all local history of files
 
 # End of https://www.gitignore.io/api/salesforcedx,visualstudiocode
+.force-app/main/default/profiles/*
