--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ TestsResultsCache.xml
 # End of https://www.gitignore.io/api/salesforcedx,visualstudiocode
 force-app/main/default/profiles
 mdapioutput
+.localdevserver
