--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
-  "trailingComma": "none",
+  "printWidth": 100,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "endOfLine": "lf",
   "overrides": [
     {
       "files": "**/lwc/**/*.html",
